🐛  fix: decrease max-width for span elements nestled within first-cell-pad class to prevent horizontal scroll for longer stop names

--- a/src/app/components/_infoWindow.scss
+++ b/src/app/components/_infoWindow.scss
@@ -169,7 +169,10 @@ $max-height: 63dvh;
     .first-cell-pad {
         padding-left: v.$padding-textBox;
         transition: padding 1s ease .6s;
-        // background-color: v.$primary-color--muted;
+
+        span {
+            max-width: 170px;
+        }
     }
 
     @for $i from 0 through 9 {
